Adding Bohr model

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,6 +14,6 @@ lib_LTLIBRARIES = liboctetos-physical.la
 
 liboctetos_physical_la_CXXFLAGS = 
 liboctetos_physical_la_LIBADD =  
-liboctetos_physical_la_SOURCES = Atom.cc gen/names.cc gen/symbols.cc  
+liboctetos_physical_la_SOURCES = Atom.cc Atom-Bohr.cc gen/names.cc gen/symbols.cc  
 
 
