--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 
 
-AC_INIT(octetos-physical, 0.1.0, azael.devel@gmail.com)
+AC_INIT(octetos-physical, 0.2.0-alpha, azael.devel@gmail.com)
 
 AC_CONFIG_HEADERS([config.h])
 
