--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,3 +17,10 @@ liboctetos_physical_la_LIBADD =
 liboctetos_physical_la_SOURCES = Atom.cc Atom-Bohr.cc gen/names.cc gen/symbols.cc gen/props.cc gen/qnum.cc
 
 
+octetos_physical_includedir = $(includedir)/octetos/physical
+octetos_physical_include_HEADERS = Atom.hh Atom-Bohr.hh
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = octetos-physical.pc
+
+EXTRA_DIST = octetos-physical.pc.in
